<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/head2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="20dp"
            android:paddingHorizontal="30dp">
            <ImageView
                android:id="@+id/user_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_description_media"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user"
                android:layout_marginTop="0dp"/>
            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_bienvenida"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="96dp"
                android:paddingStart="26dp"
                android:textSize="28dp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_restaurants"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"

                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/shadow"
                app:layout_constraintTop_toBottomOf="@id/text_welcome"
                android:radius="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/search_restaurants"
                app:layout_constraintTop_toBottomOf="@id/text_welcome"
                android:backgroundTint="@color/shadow"
                android:text="@string/buscar"
                android:textColor="@color/black"
                />

            <Button
                android:layout_marginTop="60dp"
                android:textColor="@color/white"
                android:id="@+id/nada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/search_restaurants"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/butExplorar"
                android:backgroundTint="@color/principal"

                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPro1"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:backgroundTint="@color/principal"
                app:layout_constraintTop_toBottomOf="@id/nada"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >

                <ImageView
                    android:id="@+id/imgRest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cardPro1"
                    app:srcCompat="@drawable/image_2"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/pro1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textNam1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="120dp"/>
                <TextView
                    android:id="@+id/tiempo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textTiempo1"
                    android:textSize="12dp"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="140dp"/>
                <Button
                    android:id="@+id/mas1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/shadow"
                    android:text="@string/mas"
                    android:textSize="8dp"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPro3"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:backgroundTint="@color/principal"
                app:layout_constraintTop_toBottomOf="@id/cardPro1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >

                <ImageView
                    android:id="@+id/imgRest3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cardPro1"
                    app:srcCompat="@drawable/image_119282"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/pro3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textNam3"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="120dp"/>
                <TextView
                    android:id="@+id/tiempo3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textTiempo1"
                    android:textSize="12dp"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="140dp"/>
                <Button
                    android:id="@+id/mas3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/shadow"
                    android:text="@string/mas"
                    android:textSize="8dp"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPro2"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:backgroundTint="@color/principal"
                app:layout_constraintTop_toBottomOf="@id/nada"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cardPro1"
                    app:srcCompat="@drawable/image_11924"

                    android:layout_marginTop="4dp"
                    />
                <TextView
                    android:id="@+id/pro2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textNam2"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="120dp"/>
                <TextView
                    android:id="@+id/tiempo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textTiempo2"
                    android:textSize="12dp"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="140dp"/>
                <Button
                    android:id="@+id/mas2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/shadow"
                    android:text="@string/mas"
                    android:textSize="8dp"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPro4"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:backgroundTint="@color/principal"
                app:layout_constraintTop_toBottomOf="@id/cardPro2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:clickable="true"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/cardPro1"
                    app:srcCompat="@drawable/image_119281"

                    android:layout_marginTop="4dp"
                    />
                <TextView
                    android:id="@+id/pro4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textNam4"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="112dp"/>
                <TextView
                    android:id="@+id/tiempo4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/textTiempo1"
                    android:textSize="12dp"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="145dp"/>
                <Button
                    android:id="@+id/mas4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/shadow"
                    android:text="@string/mas"
                    android:textSize="8dp"
                    android:textColor="@color/black"
                    />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>