<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@drawable/head2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="20dp"
            android:paddingHorizontal="30dp">
            <ImageView
                android:id="@+id/user_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/content_description_media"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user"
                android:layout_marginTop="0dp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/image_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="120dp"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/nombreReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNam1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="260dp"
                android:paddingStart="30dp"
                android:textSize="28dp"
                android:textStyle="bold"/>
            <Button
                android:layout_marginTop="60dp"
                android:textColor="@color/white"
                android:id="@+id/nada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/nombreReceta"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/butIngre"
                android:backgroundTint="@color/principal"
                android:layout_marginStart="108dp"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>